--- a/index.html
+++ b/index.html
@@ -23,5 +23,7 @@
   </head>
   <body>
     <h1>Welcome to the mobile web</h1>
+    <a href="https://github.com/wahwahyuknr" itemprop="author" rel="author">wahwahyuknr</a>
+    <a href="https://github.com/wahwahyuknr" itemprop="publisher" rel="publisher">wahwahyuknr</a>
   </body>
 </html>
