--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html amp lang="en">
   <head>
+    <meta name="google-site-verification" content="AIA5sWqYkvS0pIBd1Mjslndhw_iVvEi7OOaHK_sUi1w" />
     <meta charset="utf-8">
     <script async src="https://cdn.ampproject.org/v0.js"></script>
     <title>Hello, AMPs</title>
